--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.11.0",
     "lucide-react": "^0.453.0",
-    "next": "15.0.3",
+    "next": "^16.0.1",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
