--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "executive-driver-brazil",
+  "name": "seoo-mobilidade-executiva",
   "version": "1.0.0",
   "private": true,
   "scripts": {
